--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<h2><a href = "자기소개서.html"> HOME </a>   <c><center>간단한 자기소개</center></c></h2>
 	<hr><hr>
     <div style="display:inline-block;vertical-align:top;">
-    <img src="C:\Users\rbghr\Desktop\과제\1333.jpg" width="300" height="500" alt="img"/>
+    <img src="https://github.com/rbghrla/Introduce/blob/main/%EC%82%AC%EC%A7%84/1333.jpg?raw=true" width="300" height="500" alt="img"/>
     </div>
     <div style="display:inline-block;">
          <p>
