--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <hr><hr>
          <div class="text_photo"> <center>
          <p id = 'explain'>★최근에 내가 찍은 집앞 노을★</p> 
-         <img src="C:\Users\rbghr\Desktop\과제\내가찍은 집앞노을.jpg"width="1400" height="600" alt=""></center>
+         <img src="https://github.com/rbghrla/Introduce/blob/main/%EC%82%AC%EC%A7%84/KakaoTalk_20220925_192646915.jpg?raw=true"width="1400" height="600" alt=""></center>
          </div>
 
          <header id = "header"> 
