--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <ul>
                 <li><a href = "mailto:rbghrla2000@gmail.com" style= "text-decoration : none"> 
                     <b> Mail &nbsp &nbsp &nbsp </b></a></li>
-                <li><a href = "https://github.com/rbghrla" style="text-decoration : none"> 
+                <li><a href = "https://github.com/rbghrla/Introduce" style="text-decoration : none"> 
                     <b> Git Hub &nbsp &nbsp &nbsp </b></a></li >
                 <li><b>  Kakao ID : rbghrla &nbsp &nbsp &nbsp</b></a></li>
                 
