--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
     <hr><hr>
          <div class="text_photo"> <center>
          <p id = 'explain'>★최근에 내가 찍은 집앞 노을★</p> 
-         <img src="https://github.com/rbghrla/Introduce/blob/main/%EC%82%AC%EC%A7%84/%EB%82%B4%EA%B0%80%EC%B0%8D%EC%9D%80%20%EC%A7%91%EC%95%9E%EB%85%B8%EC%9D%84.jpg?raw=true" 
-              height="600" alt=""></center>
+         <img src="https://github.com/rbghrla/Introduce/blob/main/%EC%82%AC%EC%A7%84/%EB%82%B4%EA%B0%80%EC%B0%8D%EC%9D%80%20%EC%A7%91%EC%95%9E%EB%85%B8%EC%9D%84.jpg?raw=true"width="1400" height="600" alt=""></center>
          </div>
 
          <header id = "header"> 
@@ -64,5 +63,6 @@
             </ul>
         </nav>
     </header> 
+
 
 
