--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
        	   font-family: 'Black Han Sans', sans-serif;}   
        	b {font-weight: 500;
        	   font-size: 30pt;
-       	   font-family: 'Nanum Pen Script', cursive;}
+       	   font-family: 'Nanum Pen Script', cursive;
+       	   text-align: center;} 
+       	e {font-weight: 500;
+       	   font-size: 50pt;
+       	   font-family: 'Nanum Pen Script', cursive;}   
+       	f,g { font-weight: 500;
+       	   font-size: 40pt;
+       	   font-family: 'Nanum Pen Script', cursive;   }
        	 
 </style></head>
 <body>
@@ -26,18 +33,27 @@
     <div style="display:inline-block;vertical-align:top;">
     <img src="https://github.com/rbghrla/Introduce/blob/main/%EC%82%AC%EC%A7%84/1333.jpg?raw=true" width="300" height="500" alt="img"/>
     </div>
-    <div style="display:inline-block;">
-         <p>
-         <b><br>
-         안녕하세요!! <br>
-	     저는 대구대학교 컴퓨터 공학과 18학번 <br>
-	     21828448 김규호 입니다.	 <br><br>
-	     대구 북구쪽에 거주중이고 통학을 합니다.<br>
-	     이 웹페에지에서는 제가 <br>
-	     좋아하는것, 취미, 앞으로 하고싶은것들을 <br>
-	     그리고 저에게 연락할 방법 등<br>
-	     간단하게 저를 소개해 드리겠습니다.
+    
+         <div class = '1' style="display:inline-block;">
+            <p>
+               <b><br>
+               안녕하세요!! <br>
+	           저는 대구대학교 컴퓨터 공학과 18학번 <br>
+	           21828448 김규호 입니다.	 <br><br>
+	           대구 북구쪽에 거주중이고 통학을 합니다.<br>
+	           이 웹페에지에서는 제가 <br>
+	           좋아하는것, 취미, 저의 모토 등, <br>
+	           그리고 저에게 연락할 방법 등<br>
+	           간단하게 저를 소개해 드리겠습니다.
          </b></p>
-    </div>
-	
-</body>
+         </div>
+        <p1s style="display:inline-block;vertical-align:top;">
+             <e>
+             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  Motto <br>
+             <g>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  내 인생의 좌우명</g>
+                <f style ="color: darkred;"><br><br>
+                    &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  서두르지 말되, 멈추진 마라. <br></f>
+                   <z> &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp  (Sin prisa, pero sin pausa)</z>
+             </e></p1s>
+    </body>
+</html>
