--- a/favorite.html
+++ b/favorite.html
@@ -13,10 +13,10 @@
        	     font-size: 40pt;}
        	hr { width : 100%;
              height : 4px;
-       	     backgroundcolor : black;}     
+       	     background color : black;}     
        	z {  font-family: 'Black Han Sans', sans-serif;
        	     font-size: 40pt;
-       	     color: white; }
+       	     color: #white; }
 
        .jb-a {
         margin: 0px auto ;
@@ -63,5 +63,9 @@
                     <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp <z>⚾야구⚾</z>
             </div>
         </div>
+    </div>
+</div>
+
+</body></html>
 
     
